src/pages/homepage.module.scss
@import "../index";

@-webkit-keyframes flip-vertical-left {
  0% {
    -webkit-transform: rotateY(0);
    transform: rotateY(0);
  }
  50% {
    -webkit-transform: rotateY(-180deg);
    transform: rotateY(-180deg);
  }
  100% {
    -webkit-transform: rotateY(-360deg);
    transform: rotateY(-360deg);
  }
}

@keyframes flip-vertical-left {
  0% {
    -webkit-transform: rotateY(0);
    transform: rotateY(0);
  }
  50% {
    -webkit-transform: rotateY(-180deg);
    transform: rotateY(-180deg);
  }
  100% {
    -webkit-transform: rotateY(-360deg);
    transform: rotateY(-360deg);
  }
}


.rotateVertCenter {
  -webkit-animation: flip-vertical-left 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
  animation: flip-vertical-left 1.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
}

.subtitle {
  color: $color-bright-1;
  font-size: $size-big;

  strong {
    color: $color-bright-2;
  }
}

.gamesGridContainer {
  @extend .flexRow;
  @extend .flexCenter;
  flex-wrap: wrap;
  max-width: 1500px;

  .gameCardContainer {
    margin: 10px;
    width: 180px;
    height: 240px;
    cursor: pointer;
    transition: all 0.1s ease-in-out;
    opacity: 0.85;
    position: relative;

    .flipCardFront {
      border-radius: 0;
    }

    .flipCardBack {
      border-radius: 0;
      background-color: transparent;
      @extend .flexColumn;

      .backColor {
        background-color: $color-dark-2;
        height: 100%;
        filter: blur(2px);
        width: 100%;
        position: absolute;
        top: 0;
        left: 0;
      }

      .backImage {
        opacity: 0.3;
        background-size: cover;
        height: 100%;
        filter: blur(2px);
        width: 100%;
        position: absolute;
        top: 0;
        left: 0;
      }

      .title {
        margin: 10px 5px;
        color: $color-bright-2;
        opacity: 1;
        position: relative;
        font-weight: $weight-regular;
        font-size: $size-normal;
        text-transform: uppercase;
      }

      .releaseDateContainer {
        font-style: italic;
        color: $color-bright-2;
        font-size: $size-small;
        position: relative;
      }

      .mediasLogosContainer {
        @extend .flexRow;
        @extend .flexCenter;
        position: absolute;
        bottom: 10px;

        img {
          width: 35px;
        }
      }
    }

    .flipCardInner {
      transition: all 0.3s ease-in-out;
    }

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    &:hover {
      transition: all 0.15s ease-out;
      //transform: scale(1.1) translateZ(0);
      backface-visibility: hidden;
      opacity: 1;

      .flipCardInner {
        transform: rotateY(180deg);
      }
    }
  }
}

.inputContainer {
  padding: 0 20px;
  border: 1px solid $color-bright-1;
  margin: 20px;
  border-radius: 50px;
  @extend .flexRow;
  @extend .flexAlignCenter;

  .icon {
    color: $color-bright-1;
    margin-right: 20px;
  }

  .input {
    padding: 10px 0;
    background: transparent;
    box-shadow: none;
    width: 400px;
    border: none;
    color: $color-bright-1;
    font-size: $size-normal;
    font-weight: $weight-light;
  }

  &.focus {
    border: 1px solid $color-bright-2;

    .icon {
      color: $color-bright-2;
    }

    .input {
      color: $color-bright-2;
    }
  }
}

.loaderContainer {
  margin: 50px;
}

.loadingContainer {
  flex: 1;
  height: 100%;
  @extend .flexColumn;
  @extend .flexAlignCenter;
  @extend .flexCenter;

  .icon {
    font-size: 50px;
    color: $color-dark-2;
    height: 65px;
  }
}

.noResultContainer {
  color: $color-bright-1;

  strong {
    color: $color-bright-2;
  }
}

